Basic nginx as http reverse proxy

--- a/files_conf/puma-server.service
+++ b/files_conf/puma-server.service
@@ -12,7 +12,7 @@ Environment="RAILS_ENV=production"
 Environment="PUMA_DB_PASSWORD=vagrant"
 Environment="PUMA_DEBUG=1"
 Environment="RAILS_LOG_TO_STDOUT=1"
-Environment="RAILS_SERVE_STATIC_FILES=1"
+#Environment="RAILS_SERVE_STATIC_FILES=1"
 TimeoutSec=30
 RestartSec=15
 Restart=always
