--- a/nginx/basic.conf
+++ b/nginx/basic.conf
@@ -2,8 +2,28 @@ server {
   listen 80;
   listen [::]:80;
   server_name puma-server.example.com;
+  root /home/vagrant/puma_server/public;
+
+  # allow uploads up to 100MB size
+  client_max_body_size 100m;
+
+  keepalive_timeout 10;
+
+  location ~ ^/(assets|packs) {
+    expires max;
+    gzip_static on;
+  }
 
   location / {
     proxy_pass http://localhost:3000;
+    # for websockets and keepalive connections
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $host;
+    proxy_set_header X-Forwarded-Port $server_port;
   }
 }
