Use self-signed certs for nginx ssl config

--- a/nginx/basic.conf
+++ b/nginx/basic.conf
@@ -1,14 +1,29 @@
+# force ssl
 server {
   listen 80;
   listen [::]:80;
-  server_name puma-server.example.com;
-  root /home/vagrant/puma_server/public;
+  return 301 https://puma-server.example.com$request_uri;
+}
+
+server {
+  listen       443 ssl http2 default_server;
+  listen       [::]:443 ssl http2 default_server;
+  server_name  puma-server.example.com;
+
+  ssl_certificate "/home/vagrant/puma_server/certs/puma-server.crt";
+  ssl_certificate_key "/home/vagrant/puma_server/certs/puma-server.key";
+  ssl_session_cache shared:SSL:1m;
+  ssl_session_timeout  10m;
+  ssl_ciphers HIGH:!aNULL:!MD5;
+  ssl_prefer_server_ciphers on;
 
   # allow uploads up to 100MB size
   client_max_body_size 100m;
 
   keepalive_timeout 10;
 
+  # the following 2 work together
+  root /home/vagrant/puma_server/public;
   location ~ ^/(assets|packs) {
     expires max;
     gzip_static on;
@@ -16,7 +31,7 @@ server {
 
   location / {
     proxy_pass http://localhost:3000;
-    # for websockets and keepalive connections
+    # allegedly needed for websockets and keepalive connections
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
